# fastapi-project-tmpl

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
.agents/skills/spectra-propose/: SKILL.md
.cursor/commands/: spectra-apply.md  spectra-ask.md  spectra-debug.md  spectra-discuss.md  spectra-ingest.md  spectra-propose.md
.cursor/skills/spectra-ingest/: SKILL.md
.cursor/skills/spectra-propose/: SKILL.md
.github/prompts/: spectra-propose.prompt.md
.github/skills/spectra-propose/: SKILL.md
.opencode/commands/: spectra-propose.md
.opencode/skills/spectra-propose/: SKILL.md
docs/: Usage.md
openspec/changes/multi-database-and-addons/: design.md  proposal.md  tasks.md
openspec/changes/multi-database-and-addons/specs/database-variants/: spec.md
openspec/changes/multi-database-and-addons/specs/optional-addons/: spec.md
openspec/specs/database-variants/: spec.md
openspec/specs/optional-addons/: spec.md
openspec/specs/template-usage-guide/: spec.md
src/: main.py
src/shared/: database.py  lakefs.py  redis.py  storage.py
