[project]
name = "fastapi-project-tmpl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "ECL-2.0" }
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "aiosqlite>=0.22.1",
    "cryptography>=46.0.5",
    "fastapi-webpage",
    "fastapi[standard]",
    "greenlet>=3.3.1",
    "httpx>=0.28.1",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-sugar>=1.1.1",
    "sqlmodel",
    # Optional add-ons (included for template completeness; remove unused ones)
    "redis[asyncio]>=5.0.0",
    "miniopy-async>=1.21",
    "lakefs-sdk>=1.0.0",
]

[tool.uv.sources]
fastapi-webpage = { git = "https://github.com/cxphoenix/fastapi-webpage.git" }
